Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I942ab88fa444487ca62d9d4f8a0ca4e0887fe3b1

--- a/apk/res/values-mr-watch/strings.xml
+++ b/apk/res/values-mr-watch/strings.xml
@@ -29,5 +29,5 @@
     <string name="grant_dialog_button_allow_always" msgid="5216642447029937725">"पूर्ण वेळ"</string>
     <string name="grant_dialog_button_allow_foreground" msgid="2911675370133933600">"अ‍ॅप वापरताना"</string>
     <string name="grant_dialog_button_allow_background" msgid="7827419162341440169">"पूर्ण वेळ"</string>
-    <string name="permgrouplab_health" msgid="6793578181776346442">"आरोग्य आणि स्वास्थ्य"</string>
+    <string name="permgrouplab_health" msgid="6793578181776346442">"फिटनेस आणि स्वास्थ्य"</string>
 </resources>
