--- a/apk/res/values-vi-watch/strings.xml
+++ b/apk/res/values-vi-watch/strings.xml
@@ -29,5 +29,5 @@
     <string name="grant_dialog_button_allow_always" msgid="5216642447029937725">"Mọi lúc"</string>
     <string name="grant_dialog_button_allow_foreground" msgid="2911675370133933600">"Khi dùng ứng dụng"</string>
     <string name="grant_dialog_button_allow_background" msgid="7827419162341440169">"Mọi lúc"</string>
-    <string name="permgrouplab_health" msgid="6793578181776346442">"Sức khoẻ và hoạt động thể dục"</string>
+    <string name="permgrouplab_health" msgid="6793578181776346442">"Sức khoẻ và thể dục"</string>
 </resources>
