--- a/apk/res/values-bs-watch/strings.xml
+++ b/apk/res/values-bs-watch/strings.xml
@@ -29,5 +29,5 @@
     <string name="grant_dialog_button_allow_always" msgid="5216642447029937725">"Sve vrijeme"</string>
     <string name="grant_dialog_button_allow_foreground" msgid="2911675370133933600">"Dok se aplikacija koristi"</string>
     <string name="grant_dialog_button_allow_background" msgid="7827419162341440169">"Sve vrijeme"</string>
-    <string name="permgrouplab_health" msgid="6793578181776346442">"Fitnes i dobrobit"</string>
+    <string name="permgrouplab_health" msgid="6793578181776346442">"Fitnes i kvalitet života"</string>
 </resources>
