--- a/apk/res/values-zh-rCN-watch/strings.xml
+++ b/apk/res/values-zh-rCN-watch/strings.xml
@@ -29,5 +29,5 @@
     <string name="grant_dialog_button_allow_always" msgid="5216642447029937725">"始终"</string>
     <string name="grant_dialog_button_allow_foreground" msgid="2911675370133933600">"在使用应用时"</string>
     <string name="grant_dialog_button_allow_background" msgid="7827419162341440169">"始终"</string>
-    <string name="permgrouplab_health" msgid="6793578181776346442">"健身和健康"</string>
+    <string name="permgrouplab_health" msgid="6793578181776346442">"健身与健康"</string>
 </resources>
