--- a/apk/res/values-zh-rTW-watch/strings.xml
+++ b/apk/res/values-zh-rTW-watch/strings.xml
@@ -29,5 +29,5 @@
     <string name="grant_dialog_button_allow_always" msgid="5216642447029937725">"一律允許"</string>
     <string name="grant_dialog_button_allow_foreground" msgid="2911675370133933600">"僅限使用應用程式時"</string>
     <string name="grant_dialog_button_allow_background" msgid="7827419162341440169">"一律允許"</string>
-    <string name="permgrouplab_health" msgid="6793578181776346442">"健身與保健"</string>
+    <string name="permgrouplab_health" msgid="6793578181776346442">"健身與健康"</string>
 </resources>
